syntax = "proto3";

package blog;

option go_package = "github.com/Israel-Ferreira/grpc-go-course/blog/proto";



message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message BlogId {
    string id = 1;
}

message EmptyMessage {

}

service BlogService {
    rpc CreateBlog(Blog) returns (BlogId);
    rpc ReadBlog(BlogId) returns (Blog);
    rpc UpdateBlog(Blog) returns (EmptyMessage);
    rpc DeleteBlog(BlogId) returns (EmptyMessage);
    rpc ListBlog(EmptyMessage) returns (stream Blog);
}